syntax = "proto3";

import "google/protobuf/timestamp.proto";

package userService;

option go_package = "/user";


message GetUserRequest {
  string email = 1;
  string password = 2;
}


message UpdateUserRequest {
  int32 ID = 1;
  string first_name =2;
  string last_name = 3;
  string email = 4;
  string  password = 5;
  int32 role = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  string oid = 9;
  int32 status = 10;
}


message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  string message = 1;
}


service UserService {
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse);
}

